ACDEV-1373: ported TestLicenseRestResource from xml-descriptor to json-descriptor